--- a/index.html
+++ b/index.html
@@ -78,23 +78,27 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-ria
 </div>
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
-<a href="https://chat.whatsapp.com/IEgCJYuhmKkGm2KjglHDsp" target="_blank" title="Facebook Shop"><span class="bioLink-text">Group ChinoBotz</span></a>
+<a href="https://chat.whatsapp.com/CNEAFLhcCxF3zttVEpDrQt" target="_blank" title="Group Store"><span class="bioLink-text">Group Store</span></a>
 </div>
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
-<a href="https://discord.com/invite/akyebZdjz4" target="_blank" title="Tokopedia"><span class="bioLink-text">Discord Community</span></a>
+<a href="https://chat.whatsapp.com/IEgCJYuhmKkGm2KjglHDsp" target="_blank" title="ChinoBotz Group"><span class="bioLink-text">Group ChinoBotz</span></a>
 </div>
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
-<a href="https://g.page/r/CQQgS7lD6Wu_EAg/review" target="_blank" title="Google Bisnis"><span class="bioLink-text">Araxyz Roleplay | SA-MP</span></a>
+<a href="https://discord.com/invite/akyebZdjz4" target="_blank" title="Discord Community"><span class="bioLink-text">Discord Community</span></a>
 </div>
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
-<a href="https://sociabuzz.com/itzyogzz/tribe" target="_blank" title="Market Shop"><span class="bioLink-text">Sociabuzz</span></a>
+<a href="https://discord.com/invite/araxysroleplay" target="_blank" title="Araxys Roleplay SA-MP"><span class="bioLink-text">Araxyz Roleplay | SA-MP</span></a>
 </div>
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
-<a href="https://saweria.co/YogzzDevX" target="_blank" title="Saweria"><span class="bioLink-text">Saweria</span></a>
+<a href="https://sociabuzz.com/itzyogzz/tribe" target="_blank" title="Sociabuzz YogzzDevX"><span class="bioLink-text">Sociabuzz</span></a>
+</div>
+<div class="bioLink-item">
+<div class="bioLink-shadow"></div>
+<a href="https://saweria.co/YogzzDevX" target="_blank" title="Saweria YogzzDevX"><span class="bioLink-text">Saweria</span></a>
 </div>
 </div>
 </div>
