--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link href='https://yogzzdevx.com' rel='canonical'/>
     <meta content='https://yogzzdevx.com' property='og:url'/>
     <meta content='Kreator Digital, Creator Bot, Blogger' name='og:description'/>
-    <meta rel='preload' content='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhwXbp89t4GIeRRSEQrqXytM2SH1Yo_46X2BPN0Wchol8t-1u7rUWIVvwvhPcvJOLOwOuOEMdMBFsnVCBoqGQbmcQAMIWh8FqeknGAHrQXez3Z0zXY0J7IVMxULtuApLNFmdTQvOBElF0XBmCZwbDU_agHIHIJUVcrou2FxQ79zvD4azFqhLJQuLV2Q/s1600/rian_seo_cover.png' property='og:image'/>
+    <meta rel='preload' content='https://telegra.ph/file/351f93511a4f9d2bc8d1e.jpg' property='og:image'/>
     <meta content='yogzzdevx' property='profile:username'/>
     <meta content='summary' name='twitter:card'/>
-    <meta content='@rian_seo' name='twitter:title'/>
-    <meta rel='preload' content='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhwXbp89t4GIeRRSEQrqXytM2SH1Yo_46X2BPN0Wchol8t-1u7rUWIVvwvhPcvJOLOwOuOEMdMBFsnVCBoqGQbmcQAMIWh8FqeknGAHrQXez3Z0zXY0J7IVMxULtuApLNFmdTQvOBElF0XBmCZwbDU_agHIHIJUVcrou2FxQ79zvD4azFqhLJQuLV2Q/s1600/rian_seo_cover.png' property='twitter:image'/>
+    <meta content='@yogzzdevx' name='twitter:title'/>
+    <meta rel='preload' content='https://telegra.ph/file/351f93511a4f9d2bc8d1e.jpg' property='twitter:image'/>
     <meta content='https://yogzzdevx.com' name='twitter:url'/>
     <link href='https://pro.fontawesome.com/releases/v5.15.0/css/all.css' rel='stylesheet' type='text/css'/>
     <link href='https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap' rel='stylesheet'/>
@@ -90,7 +90,7 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-ria
 </div>
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
-<a href="https://discord.com/invite/araxysroleplay" target="_blank" title="Araxys Roleplay SA-MP"><span class="bioLink-text">Araxyz Roleplay | SA-MP</span></a>
+<a href="https://t.me/yogzzdevx" target="_blank" title="Aplikasi Mod/Premium Free"><span class="bioLink-text">Aplikasi Mod/Premium Free</span></a>
 </div>
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
