--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5790018561856706"
+     crossorigin="anonymous"></script>
 <title>@yogzzdevx</title>
     <meta content='width=device-width, initial-scale=1' name='viewport'/>
     <meta content='#212121' name='theme-color'/>
