--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-ria
 </div>
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
-<a href="https://chat.whatsapp.com/CNEAFLhcCxF3zttVEpDrQt" target="_blank" title="Group Store"><span class="bioLink-text">Group Store</span></a>
+<a href="https://group.ryougidigitalmarket.biz.id" target="_blank" title="Group Store"><span class="bioLink-text">Group Store</span></a>
 </div>
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
-<a href="https://chat.whatsapp.com/LauopFCymtI1K9ZLChEyib" target="_blank" title="ChinoBotz Group"><span class="bioLink-text">Group ChinoBotz</span></a>
+<a href="https://group.yogzzdevx.com" target="_blank" title="ChinoBotz Group"><span class="bioLink-text">Group ChinoBotz</span></a>
 </div>
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
@@ -101,6 +101,14 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-ria
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
 <a href="https://saweria.co/YogzzDevX" target="_blank" title="Saweria YogzzDevX"><span class="bioLink-text">Saweria</span></a>
+</div)
+<div class="bioLink-item">
+<div class="bioLink-shadow"></div>
+<a href="https://payment.ryougidigitalmarket.biz.id" target="_blank" title="Payment YogzzDevX"><span class="bioLink-text">Payment YogzzDevX</span></a>
+</div>
+<div class="bioLink-item">
+<div class="bioLink-shadow"></div>
+<a href="https://testi.ryougidigitalmarket.biz.id" target="_blank" title="Testimoni YogzzDevX"><span class="bioLink-text">Testimoni YogzzDevX</span></a>
 </div>
 </div>
 </div>
