--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-ria
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
 <a href="https://saweria.co/YogzzDevX" target="_blank" title="Saweria YogzzDevX"><span class="bioLink-text">Saweria</span></a>
-</div)
+</div>
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
 <a href="https://payment.ryougidigitalmarket.biz.id" target="_blank" title="Payment YogzzDevX"><span class="bioLink-text">Payment YogzzDevX</span></a>
